kernel/atomgit/i3c_ master_ svc_ 修复 switch 语句中的隐式 fallthrough 导致编译失败.txt
#标题
i3c: master: svc: 修复 switch 语句中的隐式 fallthrough 导致编译失败

#内核版本
OLK-6.6

#问题现象
在使用 Clang 编译器编译内核（开启 CONFIG_WERROR=y）时，编译过程报错终止，提示 switch 语句块中存在未注明的 fall-through（贯穿）错误。

#主要错误日志
drivers/i3c/master/svc-i3c-master.c:596:2: error: unannotated fall-through between switch labels [-Werror,-Wimplicit-fallthrough]
  596 |         default:
      |         ^
drivers/i3c/master/svc-i3c-master.c:596:2: note: insert 'break;' to avoid fall-through

#问题根因
在函数 `svc_i3c_master_ibi_work` 中，`SVC_I3C_MSTATUS_IBITYPE_MASTER_REQUEST` 分支执行完 `svc_i3c_master_emit_stop(master)` 后，缺少 `break` 语句，导致代码逻辑直接落入（fall through）`default` 分支。Clang 编译器比 GCC 更严格，对于落入仅包含 break 或 return 的 case 也报错，这符合内核文档 deprecated.rst 中关于 switch/case 必须以 break、fallthrough 等结束的规定。

#解决方案
在 `SVC_I3C_MSTATUS_IBITYPE_MASTER_REQUEST` case 分支的最后，添加一条 `break;` 语句，显式中断 switch 流程，以符合编码规范并消除编译警告。

#来源
https://atomgit.com/openeuler/kernel/commit/33b7592693a93203eed71e60098c018d7db0f929